WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219372
[iOS] <button> with multi-line content does not render properly
https://bugs.webkit.org/show_bug.cgi?id=219372
Summary
[iOS] <button> with multi-line content does not render properly
Aditya Keerthi
Reported
2020-11-30 14:47:19 PST
The contents are clipped to a single line, unless -webkit-appearance: none is specified.
Attachments
Patch
(8.24 KB, patch)
2020-11-30 14:59 PST
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Patch
(8.33 KB, patch)
2020-11-30 15:55 PST
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Patch
(31.20 KB, patch)
2020-12-01 09:09 PST
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2020-11-30 14:47:39 PST
<
rdar://problem/6061602
>
Aditya Keerthi
Comment 2
2020-11-30 14:59:52 PST
Created
attachment 415065
[details]
Patch
Darin Adler
Comment 3
2020-11-30 15:10:26 PST
Comment on
attachment 415065
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=415065&action=review
> Source/WebCore/rendering/RenderThemeIOS.mm:1031 > + style.setMinHeight(Length(static_cast<int>(ControlBaseHeight / ControlBaseFontSize * style.fontDescription().computedSize()), Fixed));
Is it good to still be doing a floor operation here (static_cast<int>) rather than a rounding or a ceiling operation?
Aditya Keerthi
Comment 4
2020-11-30 15:55:01 PST
(In reply to Darin Adler from
comment #3
)
> Comment on
attachment 415065
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=415065&action=review
> > > Source/WebCore/rendering/RenderThemeIOS.mm:1031 > > + style.setMinHeight(Length(static_cast<int>(ControlBaseHeight / ControlBaseFontSize * style.fontDescription().computedSize()), Fixed)); > > Is it good to still be doing a floor operation here (static_cast<int>) > rather than a rounding or a ceiling operation?
I think we can just remove the rounding entirely, for a more precise min-height. Uploading a new patch which does this. I will also revisit the height calculation in the near future, as it may change due to the iOS form control redesign.
Aditya Keerthi
Comment 5
2020-11-30 15:55:12 PST
Created
attachment 415071
[details]
Patch
Aditya Keerthi
Comment 6
2020-12-01 09:09:50 PST
Created
attachment 415140
[details]
Patch
Aditya Keerthi
Comment 7
2020-12-01 09:10:50 PST
Rebaselined existing tests to account for the change.
EWS
Comment 8
2020-12-01 12:57:34 PST
Committed
r270325
: <
https://trac.webkit.org/changeset/270325
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415140
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug