[iOS] <button> with multi-line content does not render properly https://bugs.webkit.org/show_bug.cgi?id=219372 <rdar://problem/6061602>

Reviewed by Darin Adler.

Source/WebCore:

Currently, on iOS, a <button> that has multiple lines of content clips
the content to a single line. This behavior is incorrect, since <button>
can contain arbitrary HTML and should resize based on its content.

The incorrect behavior occurs due to the forcing of a single line height
for the button in RenderThemeIOS::adjustButtonStyle. To fix, replace
setHeight with setMinHeight when styling the button. This ensures the
button retains its appearance for single-line content, but does not clip
multi-line content.

Test: fast/forms/button-multiline-height.html

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustButtonStyle const):
* rendering/RenderTheme.h:
(WebCore::RenderTheme::setButtonSize): Removed.

This virtual method is unnecessary, as it is only used by a single
derived class, RenderThemeIOS.

* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::adjustButtonStyle const):

No longer round down the height calculation, to ensure the min height
better matches the font size.

LayoutTests:

* fast/forms/button-multiline-height-expected.txt: Added.
* fast/forms/button-multiline-height.html: Added.
* platform/ios/css3/flexbox/button-expected.txt:
* platform/ios/fast/forms/box-shadow-override-expected.txt:
* platform/ios/fast/forms/button-sizes-expected.txt:
* platform/ios/fast/forms/control-restrict-line-height-expected.txt:
* platform/ios/fast/forms/input-button-sizes-expected.txt:


Canonical link: https://commits.webkit.org/232020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270325 268f45cc-cd09-0410-ab3c-d52691b4dbfc